--- a/_posts/0000-01-02-kamman626.md
+++ b/_posts/0000-01-02-kamman626.md
@@ -1,6 +1,6 @@
 ---
 layout: slide
-title: "Welcome to our second slide!"
+title: "Welcome to kam github slide!"
 ---
 This is kam Slide
 Use the left arrow to go back!
