make line 5 more awesome

--- a/_posts/0000-01-02-kamman626.md
+++ b/_posts/0000-01-02-kamman626.md
@@ -2,5 +2,5 @@
 layout: slide
 title: "Welcome to kam github slide!"
 ---
-This is kam awesome Slide
+This is kam awesome Slide :tada:
 Use the left arrow to go back!
